integration of file handling and storing at AWS s3